--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@visx/tooltip": "^1.1.0",
     "clsx": "^1.1.1",
     "d3": "^6.2.0",
+    "isomorphic-fetch": "^3.0.0",
     "jquery": "^3.5.1",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
