--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-google-recaptcha": "^2.1.0",
     "react-query": "^3.3.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.1",
