--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/classnames": "^2.2.11",
     "@visx/axis": "^1.1.0",
     "@visx/event": "^1.0.0",
     "@visx/gradient": "^1.0.0",
@@ -25,6 +26,7 @@
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-ga": "^3.3.0",
     "react-google-recaptcha": "^2.1.0",
     "react-query": "^3.3.2",
     "react-router-dom": "^5.2.0",
