--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "EduFina",
-  "name": "EduFina - Canada's Financial Literacy Course",
+  "name": "EduFina - Financial Literacy Education",
   "icons": [
     {
       "src": "favicon.ico",
